--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,17 @@
         app:layout_constraintTop_toTopOf="@+id/detectButton"
         app:layout_constraintVertical_bias="0.0" />
 
+
+    <Button
+        android:id="@+id/take_picture"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:text="Take Picture"
+        app:layout_constraintEnd_toStartOf="@+id/cameraButton"
+        app:layout_constraintStart_toEndOf="@+id/detectButton"
+        app:layout_constraintTop_toBottomOf="@+id/detectButton" />
+
     <Button
         android:id="@+id/detectButton"
         android:layout_width="wrap_content"
@@ -44,6 +55,7 @@
     <org.tensorflow.lite.examples.detection.customview.OverlayView
         android:id="@+id/tracking_overlay"
         android:layout_width="416dp"
+        android:visibility="gone"
         android:layout_height="416dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
