--- a/app/src/main/res/layout/picture_detect.xml
+++ b/app/src/main/res/layout/picture_detect.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -23,17 +24,30 @@
             android:layout_height="match_parent"
             android:adjustViewBounds="true"
             android:contentDescription="@null"
-            android:scaleType="fitCenter" />
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_add_photo_alternate"/>
     </FrameLayout>
 
 
-    <Button
+    <!--<Button
         android:id="@+id/take_picture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center|bottom"
         android:layout_margin="16dp"
         android:text="take_photo"
-        android:textAllCaps="false" />
+        android:textAllCaps="false" />-->
+    <ImageButton
+        android:id="@+id/take_picture"
+        style="@android:style/Widget.DeviceDefault.ImageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|bottom"
+        android:layout_margin="16dp"
+        android:background="#FFFFFF"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_action_name"
+        android:text="Camera"
+        android:textSize="16sp" />
 
 </LinearLayout>
