--- a/app/src/main/res/layout/activity_main1.xml
+++ b/app/src/main/res/layout/activity_main1.xml
@@ -1,80 +1,173 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity1">
+    tools:ignore="ExtraText">
 
 
-    <Button
-        android:id="@+id/cameraButton"
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginBottom="33dp"
+        android:background="@color/light_blue"
+        android:paddingLeft="30dp"
+        android:paddingTop="20dp"
+        android:fontFamily="@font/nunito_sans_bold"
+        android:text="Register Meter"
+        android:textColor="@color/white"
+        android:textSize="25sp"
+        android:textStyle="bold" />
+    <ImageView
+        android:id="@+id/logout"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/logout"
+        android:clickable="true"
+        android:layout_marginTop="25dp"
+        android:layout_marginRight="20dp"
+        android:layout_alignParentRight="true"
+        />
+    <View
+        android:id="@+id/wave"
+        android:layout_width="wrap_content"
+        android:layout_height="80dp"
+        android:background="@drawable/ic_wave__1_"
+        android:layout_marginTop="60dp"
+        />
+
+    <TextView
+        android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="real_time_detection"
-        app:layout_constraintBottom_toBottomOf="@+id/detectButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.655"
-        app:layout_constraintStart_toEndOf="@+id/detectButton"
-        app:layout_constraintTop_toTopOf="@+id/detectButton"
-        app:layout_constraintVertical_bias="0.0" />
+        android:layout_below="@+id/wave"
+        android:layout_marginLeft="20dp"
+        android:fontFamily="@font/nunito_sans_light"
+        android:text="Customer name"
+        android:textColor="@color/black"
+        android:textSize="20sp" />
+
+    <EditText
+        android:id="@+id/customerName"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:inputType="text"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="5dp"
+        android:layout_below="@id/name"
+        android:shadowColor="@color/white"/>
+
+    <TextView
+        android:id="@+id/phone"
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Customer Phone Number"
+        android:textSize="20sp"
+        android:fontFamily="@font/nunito_sans_light"
+
+        android:layout_marginLeft="20dp"
+        android:layout_below="@id/customerName"
+        android:textColor="@color/black"
+        />
+    <EditText
+        android:id="@+id/customerNumber"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_below="@id/phone"
+        android:inputType="number"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:shadowColor="@color/white"/>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="300dp"
+        android:layout_height="180dp"
+        android:layout_below="@id/customerNumber"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:text="Picture of Water meter"
+        />
+    <TextView
+        android:layout_below="@id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="4dp"
+        android:id="@+id/ocr"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="5dp"
+        android:hint="OCR READING"
+        android:textSize="20sp"
+        android:textStyle="italic" />
 
 
     <Button
         android:id="@+id/take_picture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
-        android:text="Take_Picture"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/cameraButton"
-        app:layout_constraintHorizontal_bias="0.522"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/detectButton"
-        app:layout_constraintVertical_bias="0.0" />
+        android:layout_width="129dp"
+        android:layout_height="35dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="30dp"
+        android:layout_marginBottom="130dp"
+        android:background="@drawable/round"
+        android:backgroundTint="@color/light_blue"
+        android:drawableBottom="@drawable/round"
+        android:fontFamily="@font/nunito_sans_bold"
+        android:text="Picture"
+        android:textColor="@color/white"
+        android:textSize="17dp" />
 
     <Button
-        android:id="@+id/detectButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
-        android:layout_marginBottom="126dp"
-        android:text="static_Detect"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        android:id="@+id/register"
+        android:layout_width="204dp"
+        android:layout_height="36dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="-59dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="49dp"
+        android:layout_toStartOf="@+id/detect"
+        android:background="@drawable/round"
+        android:backgroundTint="@color/light_blue"
+        android:fontFamily="@font/nunito_sans_bold"
+        android:text="Register Meter"
+        android:textColor="@color/white"
+        android:textSize="17sp" />
 
     <Button
-        android:id="@+id/detectButton3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="84dp"
-        android:text="show_Uploads"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.835"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/cameraButton"
-        app:layout_constraintVertical_bias="1.0" />
+        android:id="@+id/detect"
+        android:layout_width="137dp"
+        android:layout_height="37dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="50dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="131dp"
+        android:background="@drawable/round"
+        android:backgroundTint="@color/light_blue"
+        android:fontFamily="@font/nunito_sans_bold"
+        android:text="Detect"
+        android:textColor="@color/white"
+        android:textSize="17sp" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="416dp"
-        android:layout_height="416dp"
-        android:scaleType="fitStart"
-        app:layout_constraintBottom_toTopOf="@+id/detectButton"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@drawable/yebni_logo" />
+    <Button
+        android:id="@+id/crop"
+        android:layout_width="137dp"
+        android:layout_height="37dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="50dp"
+        android:layout_marginRight="22dp"
+        android:layout_marginBottom="55dp"
+        android:background="@drawable/round"
+        android:backgroundTint="@color/light_blue"
+        android:fontFamily="@font/nunito_sans_bold"
+        android:text="Yolo"
+        android:textColor="@color/white"
+        android:textSize="17sp" />
 
-    <org.tensorflow.lite.examples.detection.customview.OverlayView
-        android:id="@+id/tracking_overlay"
-        android:layout_width="416dp"
-        android:visibility="gone"
-        android:layout_height="416dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
