--- a/app/src/main/res/layout/picture_detect.xml
+++ b/app/src/main/res/layout/picture_detect.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -25,7 +26,7 @@
             android:adjustViewBounds="true"
             android:contentDescription="@null"
             android:scaleType="fitCenter"
-            app:srcCompat="@android:mipmap/sym_def_app_icon"/>
+            android:src="@drawable/pic_24"/>
 
     </FrameLayout>
 
