--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,8 +44,8 @@
         android:layout_height="30dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="154dp"
+        android:layout_marginRight="6dp"
+        android:layout_marginBottom="150dp"
         android:background="@drawable/round"
         android:backgroundTint="@color/light_blue"
         android:fontFamily="@font/nunito_sans_bold"
@@ -60,9 +60,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="228dp"
-        android:layout_marginEnd="29dp"
-        android:layout_marginBottom="62dp"
+        android:layout_marginStart="218dp"
+        android:layout_marginEnd="39dp"
+        android:layout_marginBottom="59dp"
         android:background="@drawable/round"
         android:backgroundTint="@color/light_blue"
         android:fontFamily="@font/nunito_sans_bold"
@@ -76,17 +76,17 @@
         android:layout_height="30dp"
         android:layout_alignParentBottom="true"
         android:layout_marginLeft="20dp"
-        android:layout_marginBottom="155dp"
+        android:layout_marginBottom="150dp"
         android:background="@drawable/round"
         android:backgroundTint="@color/light_blue"
         android:drawableBottom="@drawable/round"
         android:fontFamily="@font/nunito_sans_bold"
-        android:text="static_Detect"
+        android:text="Online_detect"
         android:textColor="@color/white"
         android:textSize="17sp" />
 
     <Button
-        android:id="@+id/detectButton3"
+        android:id="@+id/offlineDetect"
         android:layout_width="165dp"
         android:layout_height="27dp"
         android:layout_alignParentBottom="true"
@@ -96,7 +96,7 @@
         android:backgroundTint="@color/light_blue"
         android:drawableBottom="@drawable/round"
         android:fontFamily="@font/nunito_sans_bold"
-        android:text="show_Uploads"
+        android:text="offline_detect"
         android:textColor="@color/white"
         android:textSize="17sp" />
 
