--- a/app/src/main/res/layout/picture_detect.xml
+++ b/app/src/main/res/layout/picture_detect.xml
@@ -6,9 +6,17 @@
     android:orientation="vertical">
 
 
+    <!--<Button
+        android:id="@+id/take_picture"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|bottom"
+        android:layout_margin="16dp"
+        android:text="take_photo"
+        android:textAllCaps="false" />-->
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="706dp"
         android:layout_weight="1">
 
         <TextView
@@ -22,23 +30,24 @@
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="650dp"
             android:adjustViewBounds="true"
             android:contentDescription="@null"
             android:scaleType="fitCenter"
-            android:src="@drawable/pic_24"/>
+            android:src="@drawable/pic_24" />
+
+        <ImageView
+            android:id="@+id/image_view"
+            android:layout_width="421dp"
+            android:layout_height="716dp"
+            android:layout_above="@+id/progress_bar"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="13dp"
+            android:layout_marginBottom="89dp"
+            android:foreground="?attr/actionBarDivider" />
 
     </FrameLayout>
 
-
-    <!--<Button
-        android:id="@+id/take_picture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center|bottom"
-        android:layout_margin="16dp"
-        android:text="take_photo"
-        android:textAllCaps="false" />-->
     <ImageButton
         android:id="@+id/take_picture"
         style="@android:style/Widget.DeviceDefault.ImageButton"
@@ -49,7 +58,6 @@
         android:background="#FFFFFF"
         android:scaleType="fitCenter"
         android:src="@drawable/ic_action_name"
-        android:text="Camera"
-        android:textSize="16sp" />
+        android:text="Camera" />
 
 </LinearLayout>
