--- a/app/src/main/res/layout/activity_main1.xml
+++ b/app/src/main/res/layout/activity_main1.xml
@@ -108,13 +108,13 @@
 
     <Button
         android:id="@+id/take_picture"
-        android:layout_width="129dp"
-        android:layout_height="35dp"
+        android:layout_width="133dp"
+        android:layout_height="36dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="54dp"
+        android:layout_marginStart="56dp"
         android:layout_marginLeft="30dp"
-        android:layout_marginBottom="104dp"
+        android:layout_marginBottom="101dp"
         android:background="@drawable/round"
         android:backgroundTint="@color/light_blue"
         android:drawableBottom="@drawable/round"
@@ -131,8 +131,8 @@
         android:layout_centerVertical="true"
         android:layout_marginStart="-59dp"
         android:layout_marginTop="50dp"
-        android:layout_marginEnd="11dp"
-        android:layout_marginBottom="33dp"
+        android:layout_marginEnd="-77dp"
+        android:layout_marginBottom="19dp"
         android:layout_toStartOf="@+id/detect"
         android:background="@drawable/round"
         android:backgroundTint="@color/light_blue"
@@ -157,7 +157,7 @@
         android:textColor="@color/white"
         android:textSize="17sp" />
 
-    <Button
+   <!-- <Button
         android:id="@+id/history"
         android:layout_width="137dp"
         android:layout_height="37dp"
@@ -171,7 +171,7 @@
         android:fontFamily="@font/nunito_sans_bold"
         android:text="history"
         android:textColor="@color/white"
-        android:textSize="17sp" />
+        android:textSize="17sp" />-->
 
 
 </RelativeLayout>
