--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,63 +40,63 @@
 
     <Button
         android:id="@+id/cameraButton"
-        android:layout_width="221dp"
-        android:layout_height="30dp"
+        android:layout_width="218dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginRight="6dp"
-        android:layout_marginBottom="150dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="132dp"
         android:background="@drawable/round"
         android:backgroundTint="@color/light_blue"
         android:fontFamily="@font/nunito_sans_bold"
-        android:text="real_time_detection"
+        android:text="real time detection"
         android:textColor="@color/white"
         android:textSize="17sp" />
 
     <Button
         android:id="@+id/take_picture"
         android:layout_width="wrap_content"
-        android:layout_height="29dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="218dp"
-        android:layout_marginEnd="39dp"
-        android:layout_marginBottom="59dp"
+        android:layout_marginEnd="38dp"
+        android:layout_marginBottom="40dp"
         android:background="@drawable/round"
         android:backgroundTint="@color/light_blue"
         android:fontFamily="@font/nunito_sans_bold"
-        android:text="Take_Picture"
+        android:text="Take Picture"
         android:textColor="@color/white"
         android:textSize="17sp" />
 
     <Button
         android:id="@+id/detectButton"
-        android:layout_width="154dp"
-        android:layout_height="30dp"
+        android:layout_width="164dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginLeft="20dp"
-        android:layout_marginBottom="150dp"
+        android:layout_marginBottom="131dp"
         android:background="@drawable/round"
         android:backgroundTint="@color/light_blue"
         android:drawableBottom="@drawable/round"
         android:fontFamily="@font/nunito_sans_bold"
-        android:text="Online_detect"
+        android:text="Online detect"
         android:textColor="@color/white"
         android:textSize="17sp" />
 
     <Button
-        android:id="@+id/offlineDetect"
-        android:layout_width="165dp"
-        android:layout_height="27dp"
+        android:id="@+id/showUploads"
+        android:layout_width="162dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginLeft="20dp"
-        android:layout_marginBottom="61dp"
+        android:layout_marginBottom="40dp"
         android:background="@drawable/round"
         android:backgroundTint="@color/light_blue"
         android:drawableBottom="@drawable/round"
         android:fontFamily="@font/nunito_sans_bold"
-        android:text="offline_detect"
+        android:text="Show uploads"
         android:textColor="@color/white"
         android:textSize="17sp" />
 
