--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -7,81 +7,43 @@
     android:gravity="center_horizontal"
     tools:context=".MainActivity">
 
-    <ScrollView
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="166dp"
+        android:layout_height="365dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="285dp">
+        android:layout_marginBottom="102dp"
+        android:maxHeight="250dp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="498dp"
+        android:text="Image Preview"
+        android:textColor="@color/design_default_color_primary"
+        android:textSize="20sp" />
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardBackgroundColor="#fff"
-                app:cardCornerRadius="3dp"
-                app:cardElevation="3dp"
-                app:cardUseCompatPadding="true">
+    <EditText
+        android:id="@+id/ocr"
+        android:layout_width="match_parent"
+        android:layout_height="92dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="551dp"
+        android:autoLink="all"
+        android:background="@null"
+        android:hint=""
+        android:padding="5dp"
+        android:textColor="#000" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="5dp">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Result"
-                        android:textColor="@color/design_default_color_primary"
-                        android:textSize="20sp" />
-
-                    <EditText
-                        android:id="@+id/resultEt"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:autoLink="all"
-                        android:background="@null"
-                        android:hint=""
-                        android:padding="5dp"
-                        android:textColor="#000" />
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardBackgroundColor="#fff"
-                app:cardCornerRadius="3dp"
-                app:cardElevation="3dp"
-                app:cardUseCompatPadding="true">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="5dp">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Image Preview"
-                        android:textColor="@color/design_default_color_primary"
-                        android:textSize="20sp" />
-
-                    <ImageView
-                        android:id="@+id/imageIv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-
-
-        </LinearLayout>
-    </ScrollView>
+    <TextView
+        android:layout_width="261dp"
+        android:layout_height="37dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="669dp"
+        android:text="Result"
+        android:textColor="@color/design_default_color_primary"
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/objectDetection"
@@ -95,16 +57,6 @@
         android:layout_marginBottom="38dp"
         android:text="object detection" />
 
-    <ImageButton
-        android:id="@+id/addImage"
-        android:layout_width="54dp"
-        android:layout_height="48dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="284dp"
-        android:layout_marginBottom="42dp"
-        android:background="@color/black"
-        android:scaleType="fitCenter"
-        android:src="@drawable/ic_action_image" />
+
 
 </RelativeLayout>
